added configuration for proxy under sub-tree

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -41,17 +41,17 @@ http_addr =
 http_port = 3000
 
 # The public facing domain name used to access grafana from a browser
-domain = localhost
+domain = www.carbon.cc
 
 # Redirect to correct domain if host header does not match domain
 # Prevents DNS rebinding attacks
 enforce_domain = false
 
 # The full public facing url
-root_url = %(protocol)s://%(domain)s:%(http_port)s/
+root_url = %(protocol)s://%(domain)s:%(http_port)s/g/
 
 # Serve Grafana from subpath specified in `root_url` setting. By default it is set to `false` for compatibility reasons.
-serve_from_sub_path = false
+serve_from_sub_path = true
 
 # Log web requests
 router_logging = false
